set(calibration_LIB_SRCS
    CalTables/BJonesDesc.cc
    CalTables/BJonesMBuf.cc
    CalTables/BJonesMCol.cc
    CalTables/BJonesMRec.cc
    CalTables/BJonesTable.cc
    CalTables/CalBuffer.cc
    CalTables/CalDescBuffer.cc
    CalTables/CalDescColumns.cc
    CalTables/CalDescColumns2.cc
    CalTables/CalDescRecord.cc
    CalTables/CalHistoryBuffer.cc
    CalTables/CalHistoryColumns.cc
    CalTables/CalHistRecord.cc
    CalTables/CalInterp.cc
    CalTables/CalInterpolation.cc
    CalTables/CalInterpolator.cc
    CalTables/CalIntpMatch.cc
    CalTables/CalIter.cc
    CalTables/CalMainBuffer.cc
    CalTables/CalMainColumns.cc
    CalTables/CalMainRecord.cc
    CalTables/CalSet2.cc
    CalTables/CalSetMetaInfo.cc
    CalTables/CalTable.cc
    CalTables/CalTable2.cc
    CalTables/CalTableDesc.cc
    CalTables/CalTableDesc2.cc
    CalTables/EPointDesc.cc
    CalTables/EPointMBuf.cc
    CalTables/EPointMCol.cc
    CalTables/EPointTable.cc
    CalTables/EPointVJMRec.cc
    CalTables/FVisJonesDesc.cc
    CalTables/FVisJonesMRec.cc
    CalTables/GJonesDesc.cc
    CalTables/GJonesMBuf.cc
    CalTables/GJonesMCol.cc
    CalTables/GJonesTable.cc
    CalTables/MJonesDesc.cc
    CalTables/MJonesMRec.cc
    CalTables/SolvableMJDesc.cc
    CalTables/SolvableMJMRec.cc
    CalTables/SolvableVJDesc.cc
    CalTables/SolvableVJMBuf.cc
    CalTables/SolvableVJMCol.cc
    CalTables/SolvableVJMRec.cc
    CalTables/SolvableVJTable.cc
    CalTables/TimeVarMJDesc.cc
    CalTables/TimeVarMJMRec.cc
    CalTables/TimeVarVJDesc.cc
    CalTables/TimeVarVJMBuf.cc
    CalTables/TimeVarVJMCol.cc
    CalTables/TimeVarVJMRec.cc
    CalTables/TimeVarVJTable.cc
    CalTables/TJonesDesc.cc
    CalTables/TJonesMBuf.cc
    CalTables/TJonesMCol.cc
    CalTables/TJonesTable.cc
    CalTables/VisJonesDesc.cc
    CalTables/VisJonesMBuf.cc
    CalTables/VisJonesMCol.cc
    CalTables/VisJonesMRec.cc
    CalTables/VisJonesTable.cc
)


add_library(casa_calibration ${calibration_LIB_SRCS})
install(TARGETS casa_calibration DESTINATION ${LIBRARY_INSTALL_DIR})
target_link_libraries(casa_calibration casa_msvis ${OTHER_LIBRARIES})
set(CALIBRATION_LIBRARIES casa_calibration casa_msvis ${OTHER_LIBRARIES})
